# massa_rust_sdk

./: .gitignore  Cargo.toml  Readme.md  SPONSORS.md  build_post.sh
.cargo/: config.toml
hello_world/: Cargo.toml
hello_world/src/: lib.rs
hello_world_scripts/: Cargo.toml
hello_world_scripts/examples/: get_operations.rs  get_status.rs  read_only_call.rs
hello_world_scripts/src/: main.rs
massa_rust_sc/: Cargo.toml
massa_rust_sc/src/: as_slice.rs  as_string.rs  as_vec.rs  context.rs  lib.rs  memory.rs  owner.rs
massa_rust_web3/: Cargo.toml
massa_rust_web3/src/: deploy.rs  deploy_sc.rs  jsonrpc.rs  jsonrpc_common.rs  jsonrpc_reqwest.rs  lib.rs
massa_sc_runner/: Cargo.toml
massa_sc_runner/src/: interface.rs  main.rs
