[package]
name = "hello_world_scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
clap = { version = "4.5.45", features = ["derive"] }
massa_rust_web3 = { path = "../massa_rust_web3" }
