[package]
name = "massa_rust_web3"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1" }
bitte = { version = "0.0.1", features = ["threads"] }
# massa deps
massa_api_exports = { git = "https://github.com/massalabs/massa", package = "massa_api_exports" }
massa_models = { git = "https://github.com/massalabs/massa", package = "massa_models" }
massa_signature = { git = "https://github.com/massalabs/massa", package = "massa_signature" }
massa_serialization = { git = "https://github.com/massalabs/massa", package = "massa_serialization" }
# optional deps
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "json"], optional = true }
serde_json = { version = "1", optional = true }
jsonrpsee = { version = "0.26", features = ["full"], optional = true }

[features]
default = ["jsonrpsee"]
jsonrpsee = ["dep:jsonrpsee"]
reqwest = ["dep:reqwest", "dep:serde_json"]
