[package]
name = "massa_sc_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
# See https://github.com/massalabs/massa/blob/main/Cargo.toml
massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs.git", "rev" = "9bfbbe1b5dc62815aa2b9f9c5b827b0198da65e3" }
massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "a356943983c274436e6092399667f8ea505d3388" }
# massa-sc-runtime = { path = "../../massa-sc-runtime" }
function_name = "0.3"
wasmer = { version = "=4.3.6", features = ["static-artifact-create"] }
tempfile = "3.21"
# wasmer-compiler-cranelift = "=4.3.6"
# wasmer-compiler-singlepass = "=4.3.6"